; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_OneVirtual.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_OneVirtual.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"r\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i8*)* @OneVirtual to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @OneVirtual(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %8 = load i8*, i8** %6, align 8
  %9 = call i32 @SubTest(i8* %8)
  %10 = load i32*, i32** %5, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %12, label %13

12:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %34

13:                                               ; preds = %3
  %14 = call i32 (...) @DbgThread()
  %15 = load i32*, i32** %5, align 8
  %16 = load i8*, i8** %7, align 8
  %17 = call i32 @cmsSaveProfileToFile(i32 %14, i32* %15, i8* %16)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %20, label %19

19:                                               ; preds = %13
  store i32 0, i32* %4, align 4
  br label %34

20:                                               ; preds = %13
  %21 = call i32 (...) @DbgThread()
  %22 = load i32*, i32** %5, align 8
  %23 = call i32 @cmsCloseProfile(i32 %21, i32* %22)
  %24 = call i32 (...) @DbgThread()
  %25 = load i8*, i8** %7, align 8
  %26 = call i32* @cmsOpenProfileFromFile(i32 %24, i8* %25, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %26, i32** %5, align 8
  %27 = load i32*, i32** %5, align 8
  %28 = icmp eq i32* %27, null
  br i1 %28, label %29, label %30

29:                                               ; preds = %20
  store i32 0, i32* %4, align 4
  br label %34

30:                                               ; preds = %20
  %31 = call i32 (...) @DbgThread()
  %32 = load i32*, i32** %5, align 8
  %33 = call i32 @cmsCloseProfile(i32 %31, i32* %32)
  store i32 1, i32* %4, align 4
  br label %34

34:                                               ; preds = %30, %29, %19, %12
  %35 = load i32, i32* %4, align 4
  ret i32 %35
}

declare dso_local i32 @SubTest(i8*) #1

declare dso_local i32 @cmsSaveProfileToFile(i32, i32*, i8*) #1

declare dso_local i32 @DbgThread(...) #1

declare dso_local i32 @cmsCloseProfile(i32, i32*) #1

declare dso_local i32* @cmsOpenProfileFromFile(i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
